@@ -1,6 +1,7 @@
 2009-01-12 - Sean Huber (shuber@huberry.com)
   * Remove read_attribute and write_attribute methods - unnecessary
   * ActiveRecord and DataMapper extensions are now "adapters"
+  * Check for existing reader and writer methods separately before creating default ones for encrypted attributes
 
 2009-01-11 - Sean Huber (shuber@huberry.com)
   * Update README
